@@ -56,7 +56,7 @@ public class OOMEHMaster extends HMaster {
    * @param args
    * @throws IOException 
    */
-  public static void main(String[] args) throws IOException {
+  public static void main(String[] args) throws Exception {
     doMain(args, OOMEHMaster.class);
   }
 }
